[package]
name = "libflow"
version = "0.3.0"
authors = ["Pascale Borscia <pascale.borscia@orange.com>",
    "Frédéric Gardes <frederic.gardes@orange.com>"]
license = "MIT/Apache-2.0"
description = "library grouping network flow data"
homepage = "https://github.com/tigroo31/libflow"
documentation = "https://docs.rs/libflow"
repository = "https://github.com/tigroo31/libflow.git"
readme = "README.md"
keywords = ["network", "flow", "path"]
categories = ["data-structures", "parsing"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.4.0", features = ["json"] }